# hctarcs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  demo.html  devlog.md  gentests.sh  index.html
compiler/: Cargo.toml
compiler/src/: ast.rs  cli.rs  infer.rs  lib.rs  main.rs  parse.rs  parse_project.rs  scratch_schema.rs
compiler/src/backend/: rust.rs
compiler/src/data/: cargo_toml.txt  macroquad_index.txt  macroquad_warning.txt  main_rs.txt  sprite_body.txt
compiler/tests/: first_images.rs
runtime/: Cargo.toml
runtime/src/: builtins.rs  callback.rs  lib.rs  poly.rs  sprite.rs  ui.rs
runtime/src/backend/: macroquad.rs  mod.rs  notan.rs  softbuffer.rs
src/: main.rs
tests/: concurrent.scratch  mandelbrot.scratch  mandelbrot.txt  sanity.scratch  stamp_pos.scratch
