[workspace]
members = [
    "compiler",
    "runtime",
]
exclude = [
    "vendor/scratch-compiler",  # For tests
    "target/scratch_out",  # Generated
    "target/scratch_out_tres",  # Generated
    "target/scratch_out_sanity",  # Generated
]
resolver = "2"

[profile.release]
lto = true
strip = "debuginfo"
opt-level = "s"
