[workspace]
members = [  # TODO: maybe I dont want these in the same workspace cause it means all the rendering shit clutters the compiler's lock file which annoys me
    "compiler",
    "runtime",
]
exclude = [
    "vendor/scratch-compiler",  # For tests
]
resolver = "2"

[profile.release]
lto = true
strip = "debuginfo"
opt-level = "s"
