[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = ["dep:anyhow", "dep:clap", "dep:zip", "dep:ureq"]

[dependencies]
anyhow = { version = "1.0.78", optional = true }
clap = { version = "4.4.12", features = ["derive"], optional = true }
zip = { version = "0.6.6", optional = true }
ureq = { version = "2.9.1", optional = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib to call wasm from js for demo
