[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
render-softbuffer = ["dep:softbuffer", "dep:winit"]
render-notan = ["dep:notan"]


[dependencies]
rand = "0.8.5"
softbuffer = { version = "0.4.0", optional = true }
winit = { version = "0.29.7", optional = true }
notan = { version = "0.11.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
