[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
render-softbuffer = ["dep:softbuffer", "dep:winit"]
render-notan = ["dep:notan", "dep:image"]
render-macroquad = ["dep:macroquad", "dep:image", "dep:egui-macroquad"]
fetch-assets = ["dep:ureq"]
inspect = ["dep:egui"]    # TODO: compiler flag to pass this to the run cmd and remove from defaults. build two wasm builds of each?

[dependencies]
rand = "0.8.5"
softbuffer = { version = "0.4.0", optional = true }
winit = { version = "0.29.7", optional = true }
notan = { version = "0.11.0", optional = true }
image = { version = "0.24.7", default-features = false, features = ["gif"], optional = true}  # TODO: cleaner way to add gif dep to notan's image import?
ureq = { version = "2.9.1", optional = true }
macroquad = {  version = "0.3.26", optional = true }  # TODO egui-macroquad crashes the newer one
egui-macroquad = {  version = "0.15.0", optional = true }
egui = { version = "0.21.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
instant = { version = "0.1.12" }
